k8s/istio/02.1-peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: kdvops-mtls
  namespace: kdvops-ns
spec:
  mtls:
    mode: PERMISSIVE  # PERMISSIVE | STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kdvops
  namespace: kdvops-ns
spec:
  host: kdvops-web-svc
  trafficPolicy:
    tls:
      mode: SIMPLE   # DISABLE |  ISTIO_MUTUAL | SIMPLE
